--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -2,48 +2,70 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { font-family: Arial; padding: 20px; }
-    .section { margin-bottom: 30px; }
-    input, select, button { margin: 5px; padding: 8px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 10px; }
-    th, td { border: 1px solid #ccc; padding: 10px; }
+    body { background-color: #f8f9fa; }
+    .container { max-width: 900px; margin: 30px auto; }
+    table th, table td { vertical-align: middle; }
   </style>
 </head>
 <body>
-  <h2>Admin Dashboard</h2>
+  <div class="container">
+    <h2 class="text-center mb-4">Admin Dashboard</h2>
 
-  <div class="section">
-    <h3>Add/Update Teacher</h3>
-    <input type="text" id="teacherId" placeholder="(hidden)" style="display:none;">
-    <input type="text" id="teacherName" placeholder="Name">
-    <input type="text" id="teacherDept" placeholder="Department">
-    <input type="text" id="teacherSubject" placeholder="Subject">
-    <input type="email" id="teacherEmail" placeholder="Email">
-    <button onclick="addOrUpdateTeacher()">Save</button>
+    <div class="card mb-4">
+      <div class="card-header bg-primary text-white">Add or Update Teacher</div>
+      <div class="card-body">
+        <form id="teacherForm" onsubmit="event.preventDefault(); addOrUpdateTeacher();">
+          <input type="hidden" id="teacherId">
+          <div class="row g-2">
+            <div class="col-md-6">
+              <input type="text" id="teacherName" class="form-control" placeholder="Name" required>
+            </div>
+            <div class="col-md-6">
+              <input type="text" id="teacherDept" class="form-control" placeholder="Department" required>
+            </div>
+            <div class="col-md-6">
+              <input type="text" id="teacherSubject" class="form-control" placeholder="Subject" required>
+            </div>
+            <div class="col-md-6">
+              <input type="email" id="teacherEmail" class="form-control" placeholder="Email" required>
+            </div>
+          </div>
+          <div class="text-end mt-3">
+            <button type="submit" class="btn btn-success">Save Teacher</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="card mb-4">
+      <div class="card-header bg-secondary text-white">Teachers List</div>
+      <div class="card-body p-0">
+        <table class="table table-striped mb-0" id="teacherTable">
+          <thead class="table-light">
+            <tr><th>Name</th><th>Dept</th><th>Subject</th><th>Email</th><th>Actions</th></tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header bg-warning text-dark">Pending Students</div>
+      <div class="card-body p-0">
+        <table class="table table-striped mb-0" id="studentTable">
+          <thead class="table-light">
+            <tr><th>Email</th><th>Action</th></tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </div>
   </div>
 
-  <div class="section">
-    <h3>Teachers</h3>
-    <table id="teacherTable">
-      <thead>
-        <tr><th>Name</th><th>Dept</th><th>Subject</th><th>Email</th><th>Actions</th></tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
-  <div class="section">
-    <h3>Pending Students</h3>
-    <table id="studentTable">
-      <thead>
-        <tr><th>Email</th><th>Approve</th></tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
-  <script type="module" src="admin-dashboard.js"></script>
+  <script type="module" src="admin.dashboard.js"></script>
 </body>
 </html>
