--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -2,24 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body { background-color: #eef2f7; padding: 20px; }
+    .container { max-width: 700px; margin: auto; }
+    .card { margin-bottom: 30px; }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h2 class="text-center mb-4">Student Dashboard</h2>
+
+    <div class="card">
+      <div class="card-header bg-info text-white">Send Message to Teacher</div>
+      <div class="card-body">
+        <form onsubmit="event.preventDefault(); sendMessage();">
+          <div class="mb-3">
+            <input type="email" class="form-control" id="messageTo" placeholder="Teacher's Email" required>
+          </div>
+          <div class="mb-3">
+            <textarea id="messageText" class="form-control" rows="4" placeholder="Type your message here..." required></textarea>
+          </div>
+          <div class="text-end">
+            <button class="btn btn-primary" type="submit">Send Message</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header bg-warning text-dark">Book Appointment</div>
+      <div class="card-body">
+        <form onsubmit="event.preventDefault(); bookAppointment();">
+          <input type="email" class="form-control mb-2" id="appointmentTeacher" placeholder="Teacher's Email" required>
+          <input type="text" class="form-control mb-2" id="appointmentTitle" placeholder="Appointment Title" required>
+          <input type="datetime-local" class="form-control mb-2" id="appointmentTime" required>
+          <input type="text" class="form-control mb-2" id="appointmentDepartment" placeholder="Department" required>
+          <input type="text" class="form-control mb-2" id="appointmentSubject" placeholder="Subject" required>
+          <div class="text-end">
+            <button class="btn btn-success" type="submit">Book Appointment</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="text-end">
+      <button class="btn btn-danger" onclick="logout()">Logout</button>
+    </div>
+  </div>
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
-    import {
-      getFirestore,
-      collection,
-      addDoc,
-      query,
-      where,
-      orderBy,
-      getDocs,
-      serverTimestamp
-    } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-firestore.js";
-    import {
-      getAuth,
-      onAuthStateChanged,
-      signOut
-    } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-auth.js";
+    import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-firestore.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyDBq46naDEGOMX_8psHUCyE14eZKFiOi5k",
@@ -47,24 +84,19 @@
     window.sendMessage = async function () {
       const to = document.getElementById("messageTo").value.trim();
       const message = document.getElementById("messageText").value.trim();
-
-      if (!to || !message) {
-        alert("Please enter recipient and message.");
-        return;
-      }
-
+      if (!to || !message) return alert("Please enter recipient and message.");
       try {
         await addDoc(collection(db, "messages"), {
           from: studentEmail,
-          to: to,
-          message: message,
-          timestamp: serverTimestamp(),
+          to,
+          message,
+          timestamp: serverTimestamp()
         });
         alert("Message sent!");
         document.getElementById("messageText").value = "";
-      } catch (error) {
-        console.error("Error sending message:", error);
+      } catch (err) {
         alert("Failed to send message.");
+        console.error(err);
       }
     };
 
@@ -74,31 +106,24 @@
       const time = document.getElementById("appointmentTime").value;
       const department = document.getElementById("appointmentDepartment").value.trim();
       const subject = document.getElementById("appointmentSubject").value.trim();
-
-      if (!teacher || !title || !time || !department || !subject) {
-        alert("Please fill in all appointment details.");
-        return;
-      }
-
+      if (!teacher || !title || !time || !department || !subject) return alert("Please fill all appointment details.");
       try {
         await addDoc(collection(db, "appointments"), {
-          teacher: teacher,
+          teacher,
           student: studentEmail,
-          title: title,
+          title,
           time: new Date(time).toISOString(),
-          status: "pending",  // teacher approves later
-          department: department,
-          subject: subject,
+          status: "pending",
+          department,
+          subject
         });
-        alert("Appointment booked! Waiting for approval.");
-        document.getElementById("appointmentTeacher").value = "";
-        document.getElementById("appointmentTitle").value = "";
-        document.getElementById("appointmentTime").value = "";
-        document.getElementById("appointmentDepartment").value = "";
-        document.getElementById("appointmentSubject").value = "";
-      } catch (error) {
-        console.error("Error booking appointment:", error);
+        alert("Appointment booked!");
+        ["Teacher", "Title", "Time", "Department", "Subject"].forEach(id =>
+          document.getElementById(`appointment${id}`).value = ""
+        );
+      } catch (err) {
         alert("Failed to book appointment.");
+        console.error(err);
       }
     };
 
@@ -106,67 +131,10 @@
       try {
         await signOut(auth);
         window.location.href = "index.html";
-      } catch (error) {
-        alert("Logout failed");
+      } catch (err) {
+        alert("Logout failed.");
       }
     };
   </script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #f0f8ff;
-    }
-    h1, h3 {
-      color: #333;
-    }
-    .section {
-      background: white;
-      padding: 15px;
-      margin-bottom: 30px;
-      border-radius: 5px;
-      box-shadow: 0 0 5px #ccc;
-      max-width: 500px;
-    }
-    input, button, textarea {
-      margin: 5px 0;
-      padding: 8px;
-      width: 100%;
-      box-sizing: border-box;
-    }
-    button {
-      cursor: pointer;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 3px;
-      font-weight: bold;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
-  </style>
-</head>
-<body>
-  <h1>Student Dashboard</h1>
-
-  <div class="section">
-    <h3>Send Message to Teacher</h3>
-    <input type="email" id="messageTo" placeholder="Teacher's Email" />
-    <textarea id="messageText" rows="4" placeholder="Type your message here..."></textarea>
-    <button onclick="sendMessage()">Send Message</button>
-  </div>
-
-  <div class="section">
-    <h3>Book Appointment</h3>
-    <input type="email" id="appointmentTeacher" placeholder="Teacher's Email" />
-    <input type="text" id="appointmentTitle" placeholder="Appointment Title" />
-    <input type="datetime-local" id="appointmentTime" />
-    <input type="text" id="appointmentDepartment" placeholder="Department" />
-    <input type="text" id="appointmentSubject" placeholder="Subject" />
-    <button onclick="bookAppointment()">Book Appointment</button>
-  </div>
-
-  <button onclick="logout()">Logout</button>
 </body>
 </html>
